# Chat

./: .flake8  Dockerfile  README.md  chat.sqlite3  docker-compose.yml  pyproject.toml  test.sqlite3
alembic/: env.py
alembic/versions/: 2024_08_13_1427-23515a948e58_init.py  2024_08_20_1148-29d47921db2e_add_table_posts.py  2024_08_22_0821-dc93bfb20c8d_add_table_like_post.py
docker/: app.sh
nginx/: nginx.conf
src/: main.py
src/core/: config.py  database.py  exceptions.py  jwt_utils.py
src/posts/: crud.py  models.py  routes.py  schemas.py
src/tasks/: tasks.py
src/templates/: base.html  index.html
src/templates/posts/: add_post.html
src/users/: crud.py  depends.py  models.py  routers.py
tests/: conftest.py  test_main.py
